# serializer version: 1
# name: test_fetch_exchange
  list([
    dict({
      'datetime': FakeDatetime(2024, 4, 3, 8, 37, tzinfo=zoneinfo.ZoneInfo(key='America/Tegucigalpa')),
      'end_datetime': None,
      'netFlow': -7.5,
      'sortedZoneKeys': 'CR->NI',
      'source': 'enteoperador.org',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_fetch_production
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': FakeDatetime(2024, 4, 3, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='America/Tegucigalpa')),
      'end_datetime': None,
      'production': dict({
        'unknown': 1460.3,
      }),
      'source': 'enteoperador.org',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'HN',
    }),
  ])
# ---
